RESOLVED FIXED57509
Regression: VO cursor doesn't follow KB focus back into HTML view
https://bugs.webkit.org/show_bug.cgi?id=57509
Summary Regression: VO cursor doesn't follow KB focus back into HTML view
chris fleizach
Reported 2011-03-30 15:45:34 PDT
1. Load attached test case with VO with WK2. 2. Tab into the text field. VO cursor follows. 3. Shift+Tab back to the "new tab" button. VO cursor follows. 4. Tab into the text field. * RESULTS VO cursor stays on the "new tab" button.
Attachments
patch (2.10 KB, patch)
2011-03-30 17:23 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-03-30 17:23:29 PDT
Darin Adler
Comment 2 2011-03-30 17:37:48 PDT
Comment on attachment 87641 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=87641&action=review > Source/WebCore/page/FocusController.cpp:173 > + bool advance = advanceFocus(direction, event, true); I would name the local variable “didAdvanceFocus”. > Source/WebCore/page/FocusController.cpp:179 > + // If focus is being set initially, accessibility needs to be informed that system focus has moved > + // into the web area again, even if focus did not change within WebCore. PostNotification is called instead > + // of handleFocusedUIElementChanged, because this will send the notification even if the element is the same. > + if (AXObjectCache::accessibilityEnabled()) > + focusedOrMainFrame()->document()->axObjectCache()->postNotification(focusedOrMainFrame()->document()->renderer(), AXObjectCache::AXFocusedUIElementChanged, true); Is it correct to do this even if advanceFocus returned false?
chris fleizach
Comment 3 2011-03-30 17:40:42 PDT
> > Source/WebCore/page/FocusController.cpp:179 > > + // If focus is being set initially, accessibility needs to be informed that system focus has moved > > + // into the web area again, even if focus did not change within WebCore. PostNotification is called instead > > + // of handleFocusedUIElementChanged, because this will send the notification even if the element is the same. > > + if (AXObjectCache::accessibilityEnabled()) > > + focusedOrMainFrame()->document()->axObjectCache()->postNotification(focusedOrMainFrame()->document()->renderer(), AXObjectCache::AXFocusedUIElementChanged, true); > > Is it correct to do this even if advanceFocus returned false? I believe so, because we want to inform that focus is now in the web area, even if it did not move. The consequence of this not being correct is minimal since the focused UI element will be the one that is already focused and the user won't see any difference.
chris fleizach
Comment 4 2011-03-30 17:45:18 PDT
Note You need to log in before you can comment on or make changes to this bug.