Regression: VO cursor doesn't follow KB focus back into HTML view https://bugs.webkit.org/show_bug.cgi?id=57509

Reviewed by Darin Adler.

In WK2, because the web area never believes focus leave the area, sending the initial
focus change when moving back into the web area, does not trigger a notification.

That behavior needs to be overridden by explicitly posting a focused UI element change
at the appropriate time. This is only used in WK2, hence the absence of a layout test for now.

* page/FocusController.cpp:
(WebCore::FocusController::setInitialFocus):



Canonical link: https://commits.webkit.org/72322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82525 268f45cc-cd09-0410-ab3c-d52691b4dbfc